Reencode index3* and print3* series to UTF-8

--- a/index3cf6.html
+++ b/index3cf6.html
@@ -13,7 +13,7 @@
 
 Ïðè÷èíà ýòèõ îùóùåíèé — êîíöåíòðàöèÿ âíèìàíèÿ âñåé àóäèòîðèè íà âàñ. À âíèìàíèå — ýòî ÷èñòàÿ ýíåðãèÿ*" />
         <meta name="keywords" content="" />
-        <meta http-equiv="Content-Type" content="text/html; charset=windows-1251" />
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <link rel="alternate" type="application/rss+xml" title="RSS 2.0" href="rss/index.html" />
         <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
         
