--- a/print31e7.html
+++ b/print31e7.html
@@ -1,9 +1,9 @@
 <html>
-<title>Òðè óðîâíÿ ìàñòåðñòâà</title>
+<title>Три уровня мастерства</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4CCF by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:10:44 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
-<meta name="keywords" content='Ïîìíèòå, êàê â ñòàðûõ ôèëüìàõ ïðî áîéöîâ Øàîëèíÿ...?'>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="keywords" content='Помните, как в старых фильмах про бойцов Шаолиня...?'>
 <meta name="description" content=''>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
@@ -14,83 +14,83 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Òðè óðîâíÿ ìàñòåðñòâà</h1><a href=index31e7.html?id=F4CCF class=slink>web-âåðñèÿ</a><p><span class='print'><div>
-	Ïîìíèòå, êàê â ñòàðûõ ôèëüìàõ ïðî áîéöîâ Øàîëèíÿ...?</div>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Три уровня мастерства</h1><a href=index31e7.html?id=F4CCF class=slink>web-версия</a><p><span class='print'><div>
+	Помните, как в старых фильмах про бойцов Шаолиня...?</div>
 <div>
 	&nbsp;</div>
 <div>
-	Âûõîäèò íà ñõâàòêó ïåðâûé. Áüåòñÿ èçî âñåõ ñèë, íî ÷óäîì íå&nbsp;</div>
+	Выходит на схватку первый. Бьется изо всех сил, но чудом не&nbsp;</div>
 <div>
-	ïîãèáàåò. Ãîðäî âîçâðàùàÿñü îí óæå ñ÷èòàåò ñåáÿ áåç 5 ìèíóò&nbsp;</div>
+	погибает. Гордо возвращаясь он уже считает себя без 5 минут&nbsp;</div>
 <div>
-	ìàñòåðîì. Äðóçüÿ ïðèâåòñòâóþò åãî ëàâðîâûìè âåíêàìè è&nbsp;</div>
+	мастером. Друзья приветствуют его лавровыми венками и&nbsp;</div>
 <div>
-	çàêàòûâàþò áîëüøîé ïðàçäíèê ïî ïîâîäó åãî ïîáåäû. Äåâóøêè&nbsp;</div>
+	закатывают большой праздник по поводу его победы. Девушки&nbsp;</div>
 <div>
-	âåøàþòñÿ åìó íà øåþ, à ðîäèòåëè ãîðäÿòñÿ èì íà âñþ äåðåâíþ.&nbsp;</div>
+	вешаются ему на шею, а родители гордятся им на всю деревню.&nbsp;</div>
 <div>
-	Ýòî íóë¸âèê, è ñåãîäíÿ åìó ïðîñòî ïîâåçëî.</div>
-<div>
-	&nbsp;</div>
-<div>
-	Âûõîäèò íà ñõâàòêó ìàñòåð ïåðâîãî óðîâíÿ. Äåëàåò ìíîãî áûñòðûõ</div>
-<div>
-	êðàñèâûõ äâèæåíèé, â ïðûæêàõ ñëîâíî ëåòàåò ïî âîçäóõó, è ïðåæäå&nbsp;</div>
-<div>
-	÷åì íàíåñòè ïîñëåäíèé óäàð ñîïåðíèêó óñïåâàåò êðàñèâî ïîøóòèòü.&nbsp;</div>
-<div>
-	Êîãäà ïûëü îñåäàåò, ìû âèäèì çàâÿçàííîå â óçëû òåëî ïîáåæäåííîãî.&nbsp;</div>
-<div>
-	Âîò çäåñü ìàñòåðñòâî íà÷èíàåòñÿ.</div>
+	Это нулёвик, и сегодня ему просто повезло.</div>
 <div>
 	&nbsp;</div>
 <div>
-	Âûõîäèò íà ñâàòêó ìàñòåð âòîðîãî óðîâíÿ. Æäåò, êîãäà ñîïåðíèê</div>
+	Выходит на схватку мастер первого уровня. Делает много быстрых</div>
 <div>
-	áðîñèòñÿ íà íåãî, äåëàåò îäíî äâèæåíèå, è ñîïåðíèê ëåæèò.</div>
+	красивых движений, в прыжках словно летает по воздуху, и прежде&nbsp;</div>
 <div>
-	Çäåñü ìàñòåðñòâî ðàñòåò.</div>
+	чем нанести последний удар сопернику успевает красиво пошутить.&nbsp;</div>
 <div>
-	&nbsp;</div>
+	Когда пыль оседает, мы видим завязанное в узлы тело побежденного.&nbsp;</div>
 <div>
-	Âûõîäèò ìàñòåð òðåòüåãî óðîâíÿ. Âñå ñîïåðíèêè ñìîòðÿò åìó â ãëàçà&nbsp;</div>
-<div>
-	è ïîêîðíî ñêëîíÿþò ãîëîâó. Âîò ýòî è åñòü íàñòîÿùåå ìàñòåðñòâî.&nbsp;</div>
+	Вот здесь мастерство начинается.</div>
 <div>
 	&nbsp;</div>
 <div>
-	Òàê ÷òî îçíà÷àåò &quot;Ìàñòåð êîììóíèêàöèè&quot;?&nbsp;</div>
+	Выходит на сватку мастер второго уровня. Ждет, когда соперник</div>
+<div>
+	бросится на него, делает одно движение, и соперник лежит.</div>
+<div>
+	Здесь мастерство растет.</div>
 <div>
 	&nbsp;</div>
 <div>
-	Òðåíèíã &quot;Ìàñòåð êîììóíèêàöèè&quot; (Ôîêóñû ÿçûêà) íà÷íåòñÿ óæå&nbsp;</div>
+	Выходит мастер третьего уровня. Все соперники смотрят ему в глаза&nbsp;</div>
 <div>
-	çàâòðà, è íà íåì ÿ ðàññêàæó (è äàì òåõíîëîãèè) âñå òðåõ óðîâíåé</div>
+	и покорно склоняют голову. Вот это и есть настоящее мастерство.&nbsp;</div>
 <div>
-	ìàñòåðñòâà. Åùå îñòàëîñü 3-4 ìåñòà â çàëå è äîñòóïíà îíëàéí-ãðóïïà:</div>
+	&nbsp;</div>
+<div>
+	Так что означает &quot;Мастер коммуникации&quot;?&nbsp;</div>
+<div>
+	&nbsp;</div>
+<div>
+	Тренинг &quot;Мастер коммуникации&quot; (Фокусы языка) начнется уже&nbsp;</div>
+<div>
+	завтра, и на нем я расскажу (и дам технологии) все трех уровней</div>
+<div>
+	мастерства. Еще осталось 3-4 места в зале и доступна онлайн-группа:</div>
 <div>
 	<a href="tricks_of_language.html">http://nlping.ru/tricks_of_language</a></div>
 <div>
 	&nbsp;</div>
 <div>
-	<strong>P.S.</strong> Êñòàòè, êîíêóðñ âûèãðàëà Áîãîìîëîâà Íèíà Àíäðååâíà, èç&nbsp;</div>
+	<strong>P.S.</strong> Кстати, конкурс выиграла Богомолова Нина Андреевна, из&nbsp;</div>
 <div>
-	Ñàíêò-Ïåòåðáóðãà. Ñ åå îòçûâîì ìû ïîçíàêîìèì Âàñ çàâòðà, à êàêèå&nbsp;</div>
+	Санкт-Петербурга. С ее отзывом мы познакомим Вас завтра, а какие&nbsp;</div>
 <div>
-	ïðèåìû ïîìîãëè åé ïîáåäèòü (ñîçíàòåëüíî èëè áåññîçíàòåëüíî, ýòî&nbsp;</div>
+	приемы помогли ей победить (сознательно или бессознательно, это&nbsp;</div>
 <div>
-	èíòåðåñíûé âîïðîñ ;)) ìû ïîäðîáíî ðàçáåðåì íà òðåíèíãå.&nbsp;</div>
+	интересный вопрос ;)) мы подробно разберем на тренинге.&nbsp;</div>
 <div>
-	Íà÷àëî â 11:00, òàê ÷òî áóäüòå â çàëå ê 10:30.&nbsp;</div>
+	Начало в 11:00, так что будьте в зале к 10:30.&nbsp;</div>
 <div>
-	Àäðåñ òóò: <a href="tricks_of_language.html">http://nlping.ru/tricks_of_language</a></div>
-</span><p><a href=index31e7.html?id=F4CCF class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+	Адрес тут: <a href="tricks_of_language.html">http://nlping.ru/tricks_of_language</a></div>
+</span><p><a href=index31e7.html?id=F4CCF class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -151,7 +151,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -173,7 +173,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
