--- a/print3216.html
+++ b/print3216.html
@@ -2,7 +2,7 @@
 <title>Деньги не главное?</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F48ED by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:02:11 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Конечно не главное, когда на главное их уже хватает! ;) Или, может, Вы считаете, что деньги антидуховны?'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
