--- a/print373c.html
+++ b/print373c.html
@@ -1,10 +1,10 @@
 <html>
-<title>10 óäèâèòåëüíûõ ôàêòîâ</title>
+<title>10 удивительных фактов</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F488C by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:01:54 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
-<meta name="description" content='...êîòîðûå ïîêàçûâàþò, ÷òî íàø ìèð íàìíîãî óäèâèòåëüíåå, ÷åì êàæåòñÿ.'>
+<meta name="description" content='...которые показывают, что наш мир намного удивительнее, чем кажется.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,35 +14,35 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>10 óäèâèòåëüíûõ ôàêòîâ</h1><a href=index373c.html?id=F488C class=slink>web-âåðñèÿ</a><p><span class='print'><p>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>10 удивительных фактов</h1><a href=index373c.html?id=F488C class=slink>web-версия</a><p><span class='print'><p>
 	<br />
-	...êîòîðûå ïîêàçûâàþò, ÷òî íàø ìèð íàìíîãî çàãàäî÷íåå, ÷åì íàì êàæåòñÿ.</p>
+	...которые показывают, что наш мир намного загадочнее, чем нам кажется.</p>
 <p style="margin-left: 40px;">
-	1. Íå õîëîäíàÿ âîäà âåñèò áîëüøå, ÷åì õîëîäíàÿ*.<br />
+	1. Не холодная вода весит больше, чем холодная*.<br />
 	<br />
-	2. Îäíà 75-âàòòíàÿ ëàìïî÷êà äàåò áîëüøå ñâåòà, ÷åì òðè 25-âàòòíûõ.<br />
+	2. Одна 75-ваттная лампочка дает больше света, чем три 25-ваттных.<br />
 	<br />
-	3. ×òîáû ñäåëàòü ïåðâûé ìèëëèîí àâòîìîáèëåé êîìïàíèè Ãåíðè Ôîðäà ïîòðåáîâàëîñü ñåìü ëåò. 132 ðàáî÷èõ äíÿ ñïóñòÿ (â 1924 ãîäó) Ôîðä ñäåëàë óæå 10 ìèëëèîíîâ ìàøèí.<br />
+	3. Чтобы сделать первый миллион автомобилей компании Генри Форда потребовалось семь лет. 132 рабочих дня спустя (в 1924 году) Форд сделал уже 10 миллионов машин.<br />
 	<br />
-	4. Æåëåçî, íàãðåòîå äî 5000 ãðàäóñîâ Öåëüñèÿ, ñòàíîâèòñÿ ãàçîîáðàçíûì.<br />
+	4. Железо, нагретое до 5000 градусов Цельсия, становится газообразным.<br />
 	<br />
-	5. Êèòàéöû èçîáðåëè êîðìîâîé ðóëü äëÿ ñóäîâ åùå â ïåðâîì âåêå íàøåé ýðû. Â Åâðîïå ýòî óñîâåðøåíñòâîâàíèå áûëî ïðèìåíåíî ëèøü â XIII âåêå, à äî òåõ ïîð êîðàáëü óäåðæèâàëè íà íóæíîì êóðñå ñ ïîìîùüþ áîêîâûõ âåñåë.<br />
+	5. Китайцы изобрели кормовой руль для судов еще в первом веке нашей эры. В Европе это усовершенствование было применено лишь в XIII веке, а до тех пор корабль удерживали на нужном курсе с помощью боковых весел.<br />
 	<br />
-	6. Ïðîñíóòüñÿ ñ óòðà ÿáëîêè ïîìîãàþò ëó÷øå, ÷åì êîôå.<br />
+	6. Проснуться с утра яблоки помогают лучше, чем кофе.<br />
 	<br />
-	7. Àáñîëþòíî ÷èñòîå çîëîòî î÷åíü ìÿãêîå, åãî ìîæíî ìÿòü ðóêàìè.<br />
+	7. Абсолютно чистое золото очень мягкое, его можно мять руками.<br />
 	<br />
-	8. Óãëåðîä íà Çåìëå äàåò áîëüøå ñîåäèíåíèé, ÷åì âñå îñòàëüíûå ýëåìåíòû âìåñòå âçÿòûå.<br />
+	8. Углерод на Земле дает больше соединений, чем все остальные элементы вместе взятые.<br />
 	<br />
-	9. Íà ñêîðîñòè ïàññàæèðñêîãî ñàìîëåòà â 1000 êì/÷àñ, äëèíà ñàìîëåòà ñòàíîâèòñÿ íà îäèí àòîì êîðî÷å, ÷åì åãî íàñòîÿùàÿ äëèíà.<br />
+	9. На скорости пассажирского самолета в 1000 км/час, длина самолета становится на один атом короче, чем его настоящая длина.<br />
 	<br />
-	10. Ýëåêòðè÷åñêèé ñòóë áûë èçîáðåòåí ñòîìàòîëîãîì.</p>
+	10. Электрический стул был изобретен стоматологом.</p>
 <p>
 	_______________________</p>
 <p>
-	* íå õîëîäíàÿ = +4 ãðàäóñà</p>
+	* не холодная = +4 градуса</p>
 <p style="text-align: right;">
-	Åãîð Áóëûãèí<br />
+	Егор Булыгин<br />
 	12.02.2011</p>
 <p style="text-align: center;">
 	<a name='vote'></a><script type='text/javascript'>
@@ -67,16 +67,16 @@ function voted(){
 }
 </script>
     <div class='mark' style='white-space: nowrap; width: 208px; overflow: hidden; float: left;'>
-    <div class='service'>Îöåíèòü:</div>
+    <div class='service'>Оценить:</div>
     <div class='stars' id='stars'>
-    <a href='setupa80d.html?id=F488C&amp;vote=1&amp;close=1' target='_blank' title='Óæàñíî!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setupcadc.html?id=F488C&amp;vote=2&amp;close=1' target='_blank' title='Ïëîõî'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setupea4d.html?id=F488C&amp;vote=3&amp;close=1' target='_blank' title='Ñðåäíå'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setupa3e9.html?id=F488C&amp;vote=4&amp;close=1' target='_blank' title='Õîðîøî'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup389c.html?id=F488C&amp;vote=5&amp;close=1' target='_blank' title='Îòëè÷íî!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setupa80d.html?id=F488C&amp;vote=1&amp;close=1' target='_blank' title='Ужасно!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setupcadc.html?id=F488C&amp;vote=2&amp;close=1' target='_blank' title='Плохо'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setupea4d.html?id=F488C&amp;vote=3&amp;close=1' target='_blank' title='Средне'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setupa3e9.html?id=F488C&amp;vote=4&amp;close=1' target='_blank' title='Хорошо'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup389c.html?id=F488C&amp;vote=5&amp;close=1' target='_blank' title='Отлично!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
     </div>
     <div class='line' id='line'></div>
-    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Ñïàñèáî!</div>
+    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Спасибо!</div>
     </div> <div style='padding-top: 10px;'><!-- AddThis Button BEGIN -->
 <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
 <a class="addthis_button_facebook"></a>
@@ -99,12 +99,12 @@ function voted(){
 
 <script type="text/javascript">var addthis_config = {"data_track_clickback":true};</script>
 <script type="text/javascript" src="../s7.addthis.com/js/250/addthis_widget.js#pubid=nlping"></script>
-<!-- AddThis Button END --></div> <div class='relateditems'><p>Ëó÷øèå ìàòåðèàëû ðàçäåëà &quot;Ýâîëþöèÿ ðàçóìà&quot;</p> <ul><li><a href='17C895A4-F4611-574C6567.html' title=' ...èëè êàê ôîðìèðóåòñÿ ðåçóëüòàò â ñèñòåìå.'>Ìåõàíèçì ìàòåðèàëèçàöèè ìûñëè</a></li><li><a href='5D2E057A-F4711-3A31474A.html' title='×òî äâèãàåò íàñ âïåðåä, ê ðåàëèçàöèè ãëàâíîãî óðîêà íàøåé æèçíè, è â ÷åì îí çàêëþ÷àåòñÿ.'>Ñìûñë æèçíè</a></li><li><a href='D1FD2B2C-F45EA-B1658BC2.html' title='Íîâàÿ âåðñèÿ "ß".'>Ýãî v. 2.0 professional</a></li><li><a href='8A706C62-F4694-8E500684.html' title='Êàê íàøå ñîçíàíèå ñîçäàåò íàøó æèçíü, è êàê ýòî èñïîëüçîâàòü.'>Ìûøëåíèå â ôîðìàòå óñïåõà</a></li><li><a href='C43A225D-F45E8-45E47EF3.html' title='Ìîäåëü, ïîçâîëÿþùàÿ ìíîãîìåðíî îïèñàòü ðàçâèòèå ÷åëîâåêà.'>Ïðîôèëü ðàçâèòèÿ ÷åëîâåêà</a></li></ul></div> 
-<h3>Êîììåíòàðèè Facebook</h3>
+<!-- AddThis Button END --></div> <div class='relateditems'><p>Лучшие материалы раздела &quot;Эволюция разума&quot;</p> <ul><li><a href='17C895A4-F4611-574C6567.html' title=' ...или как формируется результат в системе.'>Механизм материализации мысли</a></li><li><a href='5D2E057A-F4711-3A31474A.html' title='Что двигает нас вперед, к реализации главного урока нашей жизни, и в чем он заключается.'>Смысл жизни</a></li><li><a href='D1FD2B2C-F45EA-B1658BC2.html' title='Новая версия "Я".'>Эго v. 2.0 professional</a></li><li><a href='8A706C62-F4694-8E500684.html' title='Как наше сознание создает нашу жизнь, и как это использовать.'>Мышление в формате успеха</a></li><li><a href='C43A225D-F45E8-45E47EF3.html' title='Модель, позволяющая многомерно описать развитие человека.'>Профиль развития человека</a></li></ul></div> 
+<h3>Комментарии Facebook</h3>
 <div id="fb-root"></div>
 <div class="fb-comments" data-href="http://nlping.ru/F488C" data-num-posts="100" data-width="600"></div>
 
-<h3>Êîììåíòàðèè Âêîíòàêòå</h3>
+<h3>Комментарии Вконтакте</h3>
 <div id="vk_comments"></div>
 <script type="text/javascript">
 VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
@@ -128,13 +128,13 @@ VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
 </script>
 <br />
 	&nbsp;</p>
-</span><p><a href=index373c.html?id=F488C class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+</span><p><a href=index373c.html?id=F488C class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -195,7 +195,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -217,7 +217,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
