--- a/print3836.html
+++ b/print3836.html
@@ -1,10 +1,10 @@
 <html>
-<title>Òâîÿ ÷àøà ñëèøêîì ïîëíà â÷åðàøíèì ÷àåì</title>
+<title>Твоя чаша слишком полна вчерашним чаем</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4A12 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:05:04 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
-<meta name="description" content='Â òåìó çàâåðøåíèÿ ðàñïðîäàæè ÿ õî÷ó ïîäåëèòüñÿ ñ Âàìè èçâåñòíîé ïðèò÷åé â òðåíåðñêîé ðàìêå...'>
+<meta name="description" content='В тему завершения распродажи я хочу поделиться с Вами известной притчей в тренерской рамке...'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,81 +14,81 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Òâîÿ ÷àøà ñëèøêîì ïîëíà â÷åðàøíèì ÷àåì</h1><a href=index3836.html?id=F4A12 class=slink>web-âåðñèÿ</a><p><span class='print'><p>
-	Ðàñïðîäàæà ÍËÏ-òðåíèíãîâ çàêîí÷èòñÿ ñåãîäíÿ â 23:59. Ýòî ïîñëåäíèé øàíñ ïîëó÷èòü æåëàåìûå òðåíèíãè çà ÷åòâåðòü öåíû, <a href="index9432.html?id=sale">âîñïîëüçóéòåñü èì</a>.<br />
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Твоя чаша слишком полна вчерашним чаем</h1><a href=index3836.html?id=F4A12 class=slink>web-версия</a><p><span class='print'><p>
+	Распродажа НЛП-тренингов закончится сегодня в 23:59. Это последний шанс получить желаемые тренинги за четверть цены, <a href="index9432.html?id=sale">воспользуйтесь им</a>.<br />
 	<br />
-	È â òåìó çàâåðøåíèÿ ðàñïðîäàæè ÿ õî÷ó ïîäåëèòüñÿ ñ Âàìè èçâåñòíîé ïðèò÷åé â òðåíåðñêîé ðàìêå:<br />
+	И в тему завершения распродажи я хочу поделиться с Вами известной притчей в тренерской рамке:<br />
 	<br />
-	Äëÿ íà÷èíàþùèõ - ôîêóñ âíèìàíèÿ íà ãåðîÿ ïðèò÷è è âîïðîñû â êîíöå.<br />
-	Äëÿ ïðîäâèíóòûõ - ôîêóñ íà âñåõ îñòàëüíûõ, íóæíûå âîïðîñû âíóòðè Âàñ.<br />
-	Äëÿ ÍËÏåðîâ - ÍËÏåðñêàÿ êîíöîâêà ;)</p>
+	Для начинающих - фокус внимания на героя притчи и вопросы в конце.<br />
+	Для продвинутых - фокус на всех остальных, нужные вопросы внутри Вас.<br />
+	Для НЛПеров - НЛПерская концовка ;)</p>
 <h3>
-	<em>Ìîæíî âåðèòü... à ìîæíî íå âåðèòü è ñëåäîâàòü</em></h3>
+	<em>Можно верить... а можно не верить и следовать</em></h3>
 <p>
-	<em>Îäèí ÷åëîâåê áûë î÷åíü óáåæäåííûì âåðóþùèì. È âñåì âñåãäà ãîâîðèë, íàñêîëüêî îí ñèëüíî âåðèò â Áîãà.<br />
-	È âîò îäíàæäû ñëó÷èëîñü íàâîäíåíèå è âîäà ïðèáûâàëà ñ îãðîìíîé ñêîðîñòüþ.<br />
+	<em>Один человек был очень убежденным верующим. И всем всегда говорил, насколько он сильно верит в Бога.<br />
+	И вот однажды случилось наводнение и вода прибывала с огромной скоростью.<br />
 	<br />
-	Â äîì ê ÷åëîâåêó ïðèøëè ëþäè è ñêàçàëè:<br />
+	В дом к человеку пришли люди и сказали:<br />
 	<br />
-	- Ãðÿäåò íàâîäíåíèå. Ìû ïîêèäàåì ýòî ìåñòî, ïîøëè ñ íàìè.<br />
+	- Грядет наводнение. Мы покидаем это место, пошли с нами.<br />
 	<br />
-	Íî îí îòâåòèë:<br />
+	Но он ответил:<br />
 	<br />
-	- Íåò, ÿ îñòàþñü. ß âåðóþ â Ãîñïîäà. Îí ñïàñ¸ò ìåíÿ.<br />
+	- Нет, я остаюсь. Я верую в Господа. Он спасёт меня.<br />
 	<br />
-	Ëþäè ïîæàëè ïëå÷àìè è óøëè.<br />
+	Люди пожали плечами и ушли.<br />
 	<br />
-	Âîäà ïðîäîëæàëà ïðèáûâàòü. Êîãäà äîì áûë íàïîëîâèíó çàòîïëåí, ê íåìó ïîäïëûëà ëîäêà. È ëþäè, ñèäÿùèå â íåé, ñêàçàëè:<br />
+	Вода продолжала прибывать. Когда дом был наполовину затоплен, к нему подплыла лодка. И люди, сидящие в ней, сказали:<br />
 	<br />
-	- Âîäà áóäåò ïðèáûâàòü è äàëüøå! Çäåñü åñòü åù¸ îäíî ìåñòî, ïîåõàëè ñ íàìè!<br />
+	- Вода будет прибывать и дальше! Здесь есть ещё одно место, поехали с нами!<br />
 	<br />
-	Íî ÷åëîâåê îòâåòèë:<br />
+	Но человек ответил:<br />
 	<br />
-	- Íåò. ß âåðóþ â Ãîñïîäà. Îí ñïàñåò ìåíÿ!<br />
+	- Нет. Я верую в Господа. Он спасет меня!<br />
 	<br />
-	Ëîäêà óïëûëà.<br />
+	Лодка уплыла.<br />
 	<br />
-	Êîãäà äîì áûë çàòîïëåí ïîëíîñòüþ, è ÷åëîâåê óæå ñèäåë íà ìàëåíüêîì ïÿòà÷êå êðûøè, ïðèëåòåë âåðòîë¸ò. Îòòóäà êðèêíóëè:<br />
+	Когда дом был затоплен полностью, и человек уже сидел на маленьком пятачке крыши, прилетел вертолёт. Оттуда крикнули:<br />
 	<br />
-	- Ýé, ýòî òâîé ïîñëåäíèé øàíñ. Ìû áðîñèì âåð¸âêó, ïî íåé òû ñìîæåøü çàáðàòüñÿ ñþäà. Áîëüøå ïîìîùè æäàòü íåîòêóäà.<br />
+	- Эй, это твой последний шанс. Мы бросим верёвку, по ней ты сможешь забраться сюда. Больше помощи ждать неоткуда.<br />
 	<br />
-	Íî ÷åëîâåê îòâåòèë:<br />
+	Но человек ответил:<br />
 	<br />
-	- Íåò. ß âåðóþ â Ãîñïîäà. Îí îáÿçàòåëüíî ñïàñåò ìåíÿ!<br />
+	- Нет. Я верую в Господа. Он обязательно спасет меня!<br />
 	<br />
-	Âåðòîëåò óëåòåë. Âîäà ïðîäîëæèëà ïðèáûâàòü, è âñêîðå ÷åëîâåê óòîíóë.<br />
+	Вертолет улетел. Вода продолжила прибывать, и вскоре человек утонул.<br />
 	<br />
-	Âñòðåòèâ íà íåáåñàõ Áîãà, ÷åëîâåê ñïðîñèë åãî:<br />
+	Встретив на небесах Бога, человек спросил его:<br />
 	<br />
-	- ß òàê âåðèë â òåáÿ, Ãîñïîäè, ïî÷åìó æå òû íå ñïàñ ìåíÿ?<br />
+	- Я так верил в тебя, Господи, почему же ты не спас меня?<br />
 	<br />
-	Íà ÷òî Áîã îòâåòèë:<br />
+	На что Бог ответил:<br />
 	<br />
-	- ß òðèæäû ïûòàëñÿ ñïàñòè òåáÿ, íî òû ïðîèãíîðèðîâàë äàæå âåðòîë¸ò!</em><br />
+	- Я трижды пытался спасти тебя, но ты проигнорировал даже вертолёт!</em><br />
 	<br />
-	<em><strong>ÍËÏåðñêàÿ êîíöîâêà</strong></em><br />
+	<em><strong>НЛПерская концовка</strong></em><br />
 	<br />
-	<em>- Ãîñïîäè, ïî÷åìó æå òû íå ñïàñ ìåíÿ? - âîçìóòèëñÿ ÍËÏåð. - ß æå áûë â òàêîì ðàïïîðòå ñ òîáîé!<br />
-	Áîã âçäîõíóë è îòâåòèë:<br />
-	- ß òóò îòêàëèáðîâàë òâîè ïàòòåðíû, è óâèäåë ÷òî </em><em>òâîÿ ÷àøà ñëèøêîì ïîëíà â÷åðàøíèì ÷àåì. Ò</em><em>åáå íóæíî óòîíóòü åùå 534 ðàçà, ïðåæäå ÷åì òû ïîéìåøü, ÷òî çíà÷èò áûòü â ðàïïîðòå ñî ìíîé.</em><br />
+	<em>- Господи, почему же ты не спас меня? - возмутился НЛПер. - Я же был в таком раппорте с тобой!<br />
+	Бог вздохнул и ответил:<br />
+	- Я тут откалибровал твои паттерны, и увидел что </em><em>твоя чаша слишком полна вчерашним чаем. Т</em><em>ебе нужно утонуть еще 534 раза, прежде чем ты поймешь, что значит быть в раппорте со мной.</em><br />
 	<br />
-	Î ÷åì ýòà ïðèò÷à?<br />
-	Î ñëåïîé óáåæäåííîñòè â ñâîèõ èäåÿõ?<br />
-	Îá óìåíèè âèäåòü äâèæåíèÿ Áîãà â "îáû÷íûõ" âåùàõ?<br />
-	Èëè îá îæèäàíèè ÷óäà, âìåñòî ëè÷íîé îòâåòñòâåííîñòè è äåéñòâèÿ?<br />
+	О чем эта притча?<br />
+	О слепой убежденности в своих идеях?<br />
+	Об умении видеть движения Бога в "обычных" вещах?<br />
+	Или об ожидании чуда, вместо личной ответственности и действия?<br />
 	<br />
-	<strong>P.S.</strong> Âåðòîëåò óëåòàåò ñåãîäíÿ â 23:59 ;)<br />
-	<strong>P.P.S. </strong>Âûïèñàííûé <a href="index9432.html?id=sale">â ðàñïðîäàæó</a> ñ÷åò äåéñòâèòåëåí äëÿ îïëàòû â òå÷åíèå 24 ÷àñîâ.</p>
+	<strong>P.S.</strong> Вертолет улетает сегодня в 23:59 ;)<br />
+	<strong>P.P.S. </strong>Выписанный <a href="index9432.html?id=sale">в распродажу</a> счет действителен для оплаты в течение 24 часов.</p>
 <p style="text-align: right;">
-	<em>Åãîð Áóëûãèí<br />
+	<em>Егор Булыгин<br />
 	19.07.2011</em></p>
-</span><p><a href=index3836.html?id=F4A12 class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+</span><p><a href=index3836.html?id=F4A12 class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -149,7 +149,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -171,7 +171,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
