--- a/print397f.html
+++ b/print397f.html
@@ -2,7 +2,7 @@
 <title>Исполнение желаний - мистика или искусство системно мыслить?</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=9ECA3D61-F4288-CB0CCCDB by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:27:36 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='исполнение желаний'>
 <meta name="description" content='Почему желания сбываются? Вернее, почему одни желания сбываются, другие нет? И где то волшебное заклинание, которое способствует cбыче мечт? '>
 <link rel="stylesheet" href="css/print.css" type="text/css">
