--- a/print3ab8.html
+++ b/print3ab8.html
@@ -2,7 +2,7 @@
 <title>Как ревность влияет на нашу жизнь?</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F47D4 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:02:14 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='любовь, ревность, отношения, любимый'>
 <meta name="description" content='Конечно же у ревности есть и позитивная сторона. О том, как ее использовать, мы будем говорить дальше. Но в то же время, ревность и опасна.  И чтобы не допустить этой опасности, нужно знать, с чем мы имеем дело.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
