--- a/print3c04.html
+++ b/print3c04.html
@@ -2,7 +2,7 @@
 <title>Притча "Говорящая рыба"</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F47A4 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:30:22 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Сказка для взрослых про ничего-не-неделание и смысл.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
