--- a/print3ebf.html
+++ b/print3ebf.html
@@ -1,8 +1,8 @@
 <html>
-<title>Ñêà÷àòü áåñïëàòíûå êóðñû è òðåíèíãè îíëàéí</title>
+<title>Скачать бесплатные курсы и тренинги онлайн</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=5570BA84-F46E2-6F74003F by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 12:55:48 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content=''>
 <link rel="stylesheet" href="css/print.css" type="text/css">
@@ -14,8 +14,8 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Ñêà÷àòü áåñïëàòíûå êóðñû è òðåíèíãè îíëàéí</h1><a href=index3ebf.html?id=5570BA84-F46E2-6F74003F class=slink>web-âåðñèÿ</a><p><span class='print'><p>
-	Ïðåäëàãàåì Âàì ñåðèþ áåñïëàòíûõ âèäåî êóðñîâ è òðåíèíãîâ íà ïîïóëÿðíûå òåìû äëÿ ñàìîñòîÿòåëüíîãî èçó÷åíèÿ. ×òîáû ìàòåðèàë áûë ìàêñèìàëüíî ïîëåçåí, âàæíî îïðîáîâàòü åãî íà ïðàêòèêå.</p>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Скачать бесплатные курсы и тренинги онлайн</h1><a href=index3ebf.html?id=5570BA84-F46E2-6F74003F class=slink>web-версия</a><p><span class='print'><p>
+	Предлагаем Вам серию бесплатных видео курсов и тренингов на популярные темы для самостоятельного изучения. Чтобы материал был максимально полезен, важно опробовать его на практике.</p>
 <p>
 	<span style="font-size: 14px; background-color: rgb(255, 255, 255); ">        <!-- VKontakte -->
         <script type="text/javascript" src="../vk.com/dist/public/api/openapi.7fd8db35650ba51a8f05c0269f8a1e87812b.js?95"></script>
@@ -59,14 +59,14 @@ VK.Widgets.Like("vk_like", {type: "full", width: 400});
 <!-- AddThis Button END -->
 </span></p>
 <p>
-	<ul><li><h2><a href='tropa_movie.html'>Òðîïà ñèëû. Ñåðèàë ïî òðåíèíãó-ïðèêëþ÷åíèþ.</a></h2>Â õîäå ýòîãî òðåíèíãà ó÷àñòíèêè ïðîøëè ÷åðåç ñåðèþ èãð-èñïûòàíèé, êîòîðûå ïðîÿâèëè èõ ëèäåðñêèå êà÷åñòâà è ïîìîãëè ïîíÿòü "êòî ÿ?" è "÷åãî ÿ õî÷ó â æèçíè?". Âñå ïîêàçàííûå ñîáûòèÿ ïðîèñõîäèëè ðåàëüíî, âñå ãåðîè ôèëüìà - ó÷àñòíèêè òðåíèíãà.</li><li><h2><a href='spiralnaya_dinamika_vvedenie.html'>Êàê ìîòèâèðîâàòü è âäîõíîâëÿòü ëþäåé ñ ïîìîùüþ Ñïèðàëüíîé äèíàìèêè?  </a></h2>Âèäåîçàïèñü ìàñòåð-êëàññà</li><li><h2><a href='mind-layers.html'>Âèäåî-òðåíèíã "Ñëîè ñîçíàíèÿ"</a></h2>×òî ïåðâè÷íåå: ôèçèêà, ýíåðãèÿ, ïñèõèêà èëè...? Êàê âñå ýòè "ñëîè ðåàëüíîñòè" ïðîÿâëåíû â ÷åëîâåêå è âî âñåëåííîé? È êàê îíè âçàèìîñâÿçàíû äðóã ñ äðóãîì?</li><li><h2><a href='free_and_only.html'>Êàê äàòü åìó ïîëíóþ ñâîáîäó è áûòü äëÿ íåãî åäèíñòâåííîé?</a></h2>Áåñïëàòíûé êóðñ ïðî òðè óðîâíÿ ãëóáèíû â îòíîøåíèÿõ</li><li><h2><a href='creation_of_reality-webinar-reg.html'>Ñêà÷àòü ìåòîäè÷êó ïî ìýääèíãó</a></h2>Êàê ñîçäàâàòü ðåàëüíîñòü, îáëàäàþùóþ âûñîêîé ñòåïåíüþ âîâëå÷åíèÿ äëÿ ïðîäâèæåíèÿ "íåîñÿçàåìûõ" òîâàðîâ è óñëóã?</li><li><h2><a href='F1DE9315-F42AB-8A44E905'>Óïðàâëåíèå ýìîöèîíàëüíûì cîñòîÿíèåì</a></h2>Áåñïëàòíûé áàçîâûé  òðåíèíã ïî Íîâîìó Êîäó ÍËÏ â ôîðìàòå ýëåêòðîííîé êíèãè ñî âñòðîåííîé ïðîãðàììîé. Ïðàêòè÷åñêèå óïðàæíåíèÿ äëÿ  "âêëþ÷åíèÿ" ñîñòîÿíèÿ âûñîêîé ïðîäóêòèâíîñòè, ïî óïðàâëåíèþ ýìîöèÿìè è ïîâûøåíèþ óðîâíÿ ïîçèòèâà â æèçíè.</li><li><h2><a href='DE66AE3D-F46D7-AF324FC3.html'>Îíëàéí êóðñ "Ìåòîä èíòóèöèè"</a></h2>Îíëàéí êóðñ, îáó÷àþùèé áàçîâûì íàâûêàì èíòóèöèè. Âêëþ÷àåò ïðàêòè÷åñêèå óïðàæíåíèÿ. Óáåäèòåñü, ÷òî èíòóöèþ ìîæåò ñîçíàòåëüíî ïðèìåíÿòü êàæäûé.</li><li><h2><a href='training10k.html'>8 ñòðàòåãèé, óäâàèâàþùèõ ïðîäàæè òðåíèíãîâ</a></h2>Ìåòîäè÷êà äëÿ ÍËÏ-òðåíåðîâ, ÍËÏ-ìàñòåðîâ è âåäóùèõ ñåìèíàðîâ î òîì, êàê óâåëè÷èòü Âàøó ïðèáûëü ñ òðåíèíãà â 4 ðàçà.</li><li><h2><a href='F4AFC.html'>Êàê ñîçäàòü ñâîé àâòîðñêèé òðåíèíã è ñòàòü âûñîêîîïëà÷èâàåìûì òðåíåðîì</a></h2>Âèäåîêóðñ äëÿ òðåíåðîâ è âëàäåëüöåâ òðåíèíã-öåíòðîâ. Êàê ñäåëàòü ëó÷øèé òðåíèíã, ñîçäàíèå ïðîäàþùåé ïðîãðàììû òðåíèíãà, ïîèñê îðãàíèçàòîðîâ, è ìíîãîå äðóãîå...</li><li><h2><a href='F4CF5.html'>Ìàñòåð êîììóíèêàöèè</a></h2>Àóäèîçàïèñü ìàñòåð-êëàññà Åãîðà Áóëûãèíà â äåëîâîì êëóáå "Áëèæíèé êðóã" Ñåðãåÿ Çìååâà</li><li><h2><a href='bright_tranings.html'>4 èçìåðåíèÿ âàøåãî òðåíèíãà</a></h2></li><li><h2><a href='alfavit.html'>Àëôàâèò Íîâîãî Êîäà ÍËÏ</a></h2></li></ul></p>
-</span><p><a href=index3ebf.html?id=5570BA84-F46E2-6F74003F class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+	<ul><li><h2><a href='tropa_movie.html'>Тропа силы. Сериал по тренингу-приключению.</a></h2>В ходе этого тренинга участники прошли через серию игр-испытаний, которые проявили их лидерские качества и помогли понять "кто я?" и "чего я хочу в жизни?". Все показанные события происходили реально, все герои фильма - участники тренинга.</li><li><h2><a href='spiralnaya_dinamika_vvedenie.html'>Как мотивировать и вдохновлять людей с помощью Спиральной динамики?  </a></h2>Видеозапись мастер-класса</li><li><h2><a href='mind-layers.html'>Видео-тренинг "Слои сознания"</a></h2>Что первичнее: физика, энергия, психика или...? Как все эти "слои реальности" проявлены в человеке и во вселенной? И как они взаимосвязаны друг с другом?</li><li><h2><a href='free_and_only.html'>Как дать ему полную свободу и быть для него единственной?</a></h2>Бесплатный курс про три уровня глубины в отношениях</li><li><h2><a href='creation_of_reality-webinar-reg.html'>Скачать методичку по мэддингу</a></h2>Как создавать реальность, обладающую высокой степенью вовлечения для продвижения "неосязаемых" товаров и услуг?</li><li><h2><a href='F1DE9315-F42AB-8A44E905'>Управление эмоциональным cостоянием</a></h2>Бесплатный базовый  тренинг по Новому Коду НЛП в формате электронной книги со встроенной программой. Практические упражнения для  "включения" состояния высокой продуктивности, по управлению эмоциями и повышению уровня позитива в жизни.</li><li><h2><a href='DE66AE3D-F46D7-AF324FC3.html'>Онлайн курс "Метод интуиции"</a></h2>Онлайн курс, обучающий базовым навыкам интуиции. Включает практические упражнения. Убедитесь, что интуцию может сознательно применять каждый.</li><li><h2><a href='training10k.html'>8 стратегий, удваивающих продажи тренингов</a></h2>Методичка для НЛП-тренеров, НЛП-мастеров и ведущих семинаров о том, как увеличить Вашу прибыль с тренинга в 4 раза.</li><li><h2><a href='F4AFC.html'>Как создать свой авторский тренинг и стать высокооплачиваемым тренером</a></h2>Видеокурс для тренеров и владельцев тренинг-центров. Как сделать лучший тренинг, создание продающей программы тренинга, поиск организаторов, и многое другое...</li><li><h2><a href='F4CF5.html'>Мастер коммуникации</a></h2>Аудиозапись мастер-класса Егора Булыгина в деловом клубе "Ближний круг" Сергея Змеева</li><li><h2><a href='bright_tranings.html'>4 измерения вашего тренинга</a></h2></li><li><h2><a href='alfavit.html'>Алфавит Нового Кода НЛП</a></h2></li></ul></p>
+</span><p><a href=index3ebf.html?id=5570BA84-F46E2-6F74003F class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -127,7 +127,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -149,7 +149,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
