--- a/index3797.html
+++ b/index3797.html
@@ -8,7 +8,7 @@
         <meta name="robots" content="index,follow" />
         <meta name="description" content="Ñ òåì, êòî ïðèâûê, ÷òî êàæäûé äåíü ïîõîæ íà ïðåäûäóùèé, âûõîäíûå ïðîëåòàþò áûñòðî, à ñ÷åò âðåìåíè èäåò óæå äàæå íå íà íåäåëè: çèìà – âåñíà – ëåòî – îñåíü – Çäðàâñòâóé, Íîâûé ãîä!" />
         <meta name="keywords" content="" />
-        <meta http-equiv="Content-Type" content="text/html; charset=windows-1251" />
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <link rel="alternate" type="application/rss+xml" title="RSS 2.0" href="rss/index.html" />
         <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
         
