--- a/print31be.html
+++ b/print31be.html
@@ -2,7 +2,7 @@
 <title>НЛП и манипуляция</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=D1FFCAF2-F4290-17B0E327 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:55:56 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='нлп'>
 <meta name="description" content='Как НЛП связано с манипуляцией. Манипуляция, это нехорошо? Этика манипуляции.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
