--- a/print31cb.html
+++ b/print31cb.html
@@ -2,7 +2,7 @@
 <title>История возникновения НЛП</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=3C969702-F4372-49385C8D by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:55:31 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='нлп'>
 <meta name="description" content='Как зарождалось НЛП, каковы его первоисточники и базовые модели. Почему у НЛП так много общего с гипнозом.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
