--- a/print32b5.html
+++ b/print32b5.html
@@ -1,10 +1,10 @@
 <html>
-<title>Êíèãè è ñàìîó÷èòåëè</title>
+<title>Книги и самоучители</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=3D9668D0-F436B-A3575E15 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:20:26 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
-<meta name="description" content='Èçáðàííûå êíèãè è ñàìîó÷èòåëè.'>
+<meta name="description" content='Избранные книги и самоучители.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,15 +14,15 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Êíèãè è ñàìîó÷èòåëè</h1><a href=index32b5.html?id=3D9668D0-F436B-A3575E15 class=slink>web-âåðñèÿ</a><p><span class='print'><p>
-	<ul><li><h2><a href='F488F'>Ñàìîó÷èòåëü "Óïðàâëåíèå ýìîöèîíàëüíûì cîñòîÿíèåì"</a></h2>Áàçîâûé êóðñ ïî Íîâîìó Êîäó ÍËÏ â ôîðìàòå ýëåêòðîííîé êíèãè ñî âñòðîåííîé ïðîãðàììîé.</li><li><h2><a href='F478B.html'>ÍËÏ êàê îíî åñòü. Ïðàêòèêà óñïåõà.</a></h2>Áóìàæíàÿ êíèãà Åãîðà Áóëûãèíà, ñäåëàííàÿ íà îñíîâå ëó÷øèõ ìàòåðèàëîâ ýòîãî ñàéòà (ïî îöåíêàì ÷èòàòåëåé) è ðàññêàçûâàþùàÿ î òîì, êàê ïðîñòîé ÷åëîâåê (íå ÍËÏåð) ìîæåò ïðèìåíÿòü ÍËÏ â æèçíè äëÿ äîñòèæåíèÿ ãàðìîíèè ìåæäó ëè÷íûì óñïåõîì è ëè÷íûì ñ÷àñòüåì.</li><li><h2><a href='02F59B37-F46B6-8AEDB203.html'>Ïðîñòðàíñòâî ñîçíàíèÿ</a></h2>Î òîì, êàê óñòðîåíà íàøå ñîçíàíèå, êàê ýòî ñâÿçàíî ñ óñòðîéñòâîì âñåëåííîé, è ÷òî òàêîå "äóõîâíûé ïóòü". Äîñòóïíî, êîðîòêî è ÿñíî.</li><li><h2><a href='5C03C101-F4715-F6A93AC7.html'>Ïÿòü ÿçûêîâ ëþáâè</a></h2>Êàê ìû ïîíèìàåì, ÷òî íàñ ëþáÿò, è êàê ìû ìîæåì âûðàæàòü ñâîþ ëþáîâü, ÷òîáû íàøè ëþáèìûå ïîíèìàëè, ÷òî ìû èõ ëþáèì.</li><li><h2><a href='F4CD0.html'>"Íî ýòà êíèãà ìåíÿ ïîðàçèëà..." <br/>- çà ÷òî ÷èòàòåëè ïîëþáèëè "Ìîçã"?</a></h2>Èòîãè ïåðâîãî ýòàïà êîíêóðñà äàæå ó ìåíÿ âûçâàëè æåëàíèå ïðî÷èòàòü ñâîþ æå ñîáñòâåííóþ êíèãó ñíîâà ;)</li></ul></p>
-</span><p><a href=index32b5.html?id=3D9668D0-F436B-A3575E15 class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Книги и самоучители</h1><a href=index32b5.html?id=3D9668D0-F436B-A3575E15 class=slink>web-версия</a><p><span class='print'><p>
+	<ul><li><h2><a href='F488F'>Самоучитель "Управление эмоциональным cостоянием"</a></h2>Базовый курс по Новому Коду НЛП в формате электронной книги со встроенной программой.</li><li><h2><a href='F478B.html'>НЛП как оно есть. Практика успеха.</a></h2>Бумажная книга Егора Булыгина, сделанная на основе лучших материалов этого сайта (по оценкам читателей) и рассказывающая о том, как простой человек (не НЛПер) может применять НЛП в жизни для достижения гармонии между личным успехом и личным счастьем.</li><li><h2><a href='02F59B37-F46B6-8AEDB203.html'>Пространство сознания</a></h2>О том, как устроена наше сознание, как это связано с устройством вселенной, и что такое "духовный путь". Доступно, коротко и ясно.</li><li><h2><a href='5C03C101-F4715-F6A93AC7.html'>Пять языков любви</a></h2>Как мы понимаем, что нас любят, и как мы можем выражать свою любовь, чтобы наши любимые понимали, что мы их любим.</li><li><h2><a href='F4CD0.html'>"Но эта книга меня поразила..." <br/>- за что читатели полюбили "Мозг"?</a></h2>Итоги первого этапа конкурса даже у меня вызвали желание прочитать свою же собственную книгу снова ;)</li></ul></p>
+</span><p><a href=index32b5.html?id=3D9668D0-F436B-A3575E15 class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -83,7 +83,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -105,7 +105,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
