--- a/print33dd.html
+++ b/print33dd.html
@@ -2,7 +2,7 @@
 <title>Типы бессознательного</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=24705216-F4608-D3BB02AA by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:01:14 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='бессознательное'>
 <meta name="description" content='Конспект главы из книги Кена Уилбера "Проект Атман" наиболее емко описывающий современное представление науки о бессознательном человека.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
