--- a/print3762.html
+++ b/print3762.html
@@ -2,7 +2,7 @@
 <title>Профессиональный студент</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F48A9 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:02:08 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Кто умеет делать - делает. Кто не умеет - учит. Кто не может ни то, ни другое - руководит. '>
 <link rel="stylesheet" href="css/print.css" type="text/css">
