--- a/print3797.html
+++ b/print3797.html
@@ -2,7 +2,7 @@
 <title>Эта история могла бы произойти с любым</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4C20 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:28:58 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='С тем, кто привык, что каждый день похож на предыдущий, выходные пролетают быстро, а счет времени идет уже даже не на недели: зима – весна – лето – осень – Здравствуй, Новый год!'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
