--- a/print37af.html
+++ b/print37af.html
@@ -2,7 +2,7 @@
 <title>Механизм кармы - как это работает?</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4737 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:01:18 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='карма, кармический, нлп'>
 <meta name="description" content='Как работает кармический механизм на уровне психологии. Зачем он нам нужен и как можно трансформировать свою карму?'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
