--- a/print3980.html
+++ b/print3980.html
@@ -1,10 +1,10 @@
 <html>
-<title>Ïåðåõîä ê Ñîçäàíèþ</title>
+<title>Переход к Созданию</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4D10 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:04:32 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
-<meta name="keywords" content='ñîçäàòü òðåíèíã, ïðîäàòü òðåíèíã, ïðîäâèæåíèå òðåíèíãîâ'>
-<meta name="description" content='Ìû ÷àñòî ñëûøèì îò íà÷èíàþùèõ òðåíåðîâ ÷òî-òî âðîäå: «Â íàøåì ãîðîäå ëþäè íåîõîòíî ðàññòàþòñÿ ñ äåíüãàìè». Ìîë, ëþäè íå òå, âîò è íå ïîêóïàþò òðåíèíãè. '>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="keywords" content='создать тренинг, продать тренинг, продвижение тренингов'>
+<meta name="description" content='Мы часто слышим от начинающих тренеров что-то вроде: «В нашем городе люди неохотно расстаются с деньгами». Мол, люди не те, вот и не покупают тренинги. '>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,26 +14,26 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Ïåðåõîä ê Ñîçäàíèþ</h1><a href=index3980.html?id=F4D10 class=slink>web-âåðñèÿ</a><p><span class='print'>Ìû ÷àñòî ñëûøèì îò íà÷èíàþùèõ òðåíåðîâ ÷òî-òî âðîäå: &laquo;Â íàøåì ãîðîäå ëþäè íåîõîòíî ðàññòàþòñÿ ñ äåíüãàìè&raquo;. Ìîë, ëþäè íå òå, âîò è íå ïîêóïàþò òðåíèíãè. Â òàêèõ ñëó÷àÿõ ìû ïðîñòî îáúÿñíÿåì, ÷òî ëþäè îäèíàêîâî îõîòíî ðàññòàþòñÿ ñ äåíüãàìè â ëþáîì ãîðîäå, è äàæå â äåðåâíå Ïðîñòîêâàøèíî. Âîïðîñ â òîì, ïðîäàåòå ëè âû <strong>èìåííî òî</strong>, ÷òî <strong>ýòîìó ÷åëîâåêó</strong> <strong>íóæíî ñåé÷àñ</strong>.<br />
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Переход к Созданию</h1><a href=index3980.html?id=F4D10 class=slink>web-версия</a><p><span class='print'>Мы часто слышим от начинающих тренеров что-то вроде: &laquo;В нашем городе люди неохотно расстаются с деньгами&raquo;. Мол, люди не те, вот и не покупают тренинги. В таких случаях мы просто объясняем, что люди одинаково охотно расстаются с деньгами в любом городе, и даже в деревне Простоквашино. Вопрос в том, продаете ли вы <strong>именно то</strong>, что <strong>этому человеку</strong> <strong>нужно сейчас</strong>.<br />
 <br />
-Íó è êà÷åñòâî ïðîäóêòà, ñàìî ñîáîé.<br />
+Ну и качество продукта, само собой.<br />
 <br />
-Âû çàìåòèëè? ß ñêàçàë: &laquo;Êà÷åñòâî ïðîäóêòà, ÑÀÌÎ ÑÎÁÎÉ&raquo;.<br />
+Вы заметили? Я сказал: &laquo;Качество продукта, САМО СОБОЙ&raquo;.<br />
 <br />
-Íåò ëè çäåñü ïîäâîõà, ÷åðò ïîáåðè?!<br />
+Нет ли здесь подвоха, черт побери?!<br />
 <br />
-Ïîæàëóé, åñòü. Ìíîãèå òðåíåðû, îñîáåííî íà÷èíàþùèå (íî ñëó÷àåòñÿ è ñ îïûòíûìè) &laquo;ñêëàäûâàþò&raquo; ñâîè òðåíèíãè òàê, ÷òî âðîäå âñå õîðîøî, íî ïî÷åìó-òî íèêòî èç êëèåíòîâ íå òîðîïèòñÿ çàïèñûâàòüñÿ íà ñëåäóþùèé. Îøèáêà, êîòîðóþ íå çàìåòèë ñàì àâòîð òðåíèíãà, âêðàëàñü â ñàì ñöåíàðèé èëè òåõíîëîãèþ òðåíèíãà.<br />
+Пожалуй, есть. Многие тренеры, особенно начинающие (но случается и с опытными) &laquo;складывают&raquo; свои тренинги так, что вроде все хорошо, но почему-то никто из клиентов не торопится записываться на следующий. Ошибка, которую не заметил сам автор тренинга, вкралась в сам сценарий или технологию тренинга.<br />
 <br />
-Òàê äåëàòü íåëüçÿ! Òðåíèíã äîëæåí áûòü èçíà÷àëüíî &laquo;ñêðîåí&raquo; òàê, ÷òîáû âñå ïðîõîäèëî ãëàäêî, êðàñèâî, ëåãêî &ndash; ê ðàäîñòè äîâîëüíûõ êëèåíòîâ è ñàìîãî òðåíåðà. Íó è ïðèíîñèëî õîðîøóþ ïðèáûëü, êîíå÷íî. Òàê äîëæíû äåëàòü âñå.<br />
+Так делать нельзя! Тренинг должен быть изначально &laquo;скроен&raquo; так, чтобы все проходило гладко, красиво, легко &ndash; к радости довольных клиентов и самого тренера. Ну и приносило хорошую прибыль, конечно. Так должны делать все.<br />
 <br />
-Âîçìîæíî, âàñ íåìíîãî çàäåâàåò ðåçêîñòü â ìîåì ïèñüìå. Íî åñëè ÷åñòíî, íàì íàäîåëî. Íàäîåëî ñìîòðåòü, êàê ìíîæåñòâî òðåíåðîâ &ndash; óìíûõ, òàëàíòëèâûõ, êàêèå ìîãëè áû ñòàòü ÇÂÅÇÄÀÌÈ &ndash; ìó÷àþòñÿ îò íåñïîñîáíîñòè ïîñòðîèòü ñâîå äåëî òàê, ÷òîáû ñòàòü âîñòðåáîâàííûìè, âûñîêîîïëà÷èâàåìûìè, èçâåñòíûìè òðåíåðàìè. Íàì êàæåòñÿ, ýòî íåñïðàâåäëèâî.<br />
+Возможно, вас немного задевает резкость в моем письме. Но если честно, нам надоело. Надоело смотреть, как множество тренеров &ndash; умных, талантливых, какие могли бы стать ЗВЕЗДАМИ &ndash; мучаются от неспособности построить свое дело так, чтобы стать востребованными, высокооплачиваемыми, известными тренерами. Нам кажется, это несправедливо.<br />
 <br />
-Òðåíèíãè ÌÎÆÍÎ äåëàòü òàêèìè, ÷òîáû îíè ìîùíî ðàáîòàëè è õîðîøî ïðîäàâàëèñü. Áîëåå òîãî, òàê è ÄÎËÆÍÎ ÁÛÒÜ.<br />
-Ïîçàáîòüòåñü î <strong>êà÷åñòâå</strong> ïðîäóêòà (òîâàðà). Õîðîøî óïàêóéòå &ndash; ÷òîáû ÷åëîâåê âèäåë, ÷òî âû ñäåëàëè <strong>êàê ðàç</strong> <strong>äëÿ íåãî</strong>. Íàó÷èòå <strong>ïîëüçîâàòüñÿ</strong> &ndash; ÷òîáû åìó áûëî ëåãêî è ïðîñòî. Íàêîíåö, äàéòå <strong>âîçìîæíîñòü êóïèòü áûñòðî</strong>. Îñòàåòñÿ òîëüêî ïðèâëå÷ü âíèìàíèå ïîêóïàòåëÿ, äëÿ êîòîðîãî âû ñòàðàëèñü, è âñå. Ïîâåðüòå, <strong>ëþáîé ÷åëîâåê ñ÷èòàåò âûãîäû è áûñòðî ñîîáðàæàåò</strong>. Â ëþáîì ãîðîäå.<br />
+Тренинги МОЖНО делать такими, чтобы они мощно работали и хорошо продавались. Более того, так и ДОЛЖНО БЫТЬ.<br />
+Позаботьтесь о <strong>качестве</strong> продукта (товара). Хорошо упакуйте &ndash; чтобы человек видел, что вы сделали <strong>как раз</strong> <strong>для него</strong>. Научите <strong>пользоваться</strong> &ndash; чтобы ему было легко и просто. Наконец, дайте <strong>возможность купить быстро</strong>. Остается только привлечь внимание покупателя, для которого вы старались, и все. Поверьте, <strong>любой человек считает выгоды и быстро соображает</strong>. В любом городе.<br />
 <br />
-Èìåííî òàê äåëàåì ìû âñå ñâîè òðåíèíãè. Èìåííî òàê îáðàùàåìñÿ ñ êëèåíòàìè. <strong>Ïðîñòî áåðè è âçëåòàé! Ýòî ñðàáîòàåò</strong> äàæå â Õàáàðîâñêå! Âîêðóã òåáÿ õîäÿò ëþäè, èì íóæíû òâîè òîâàðû è óñëóãè. Îíè õîòÿò êóïèòü ó òåáÿ. Ïðîñòî òû íå çíàåøü, êàê ñ íèìè &laquo;ñîåäèíèòüñÿ&raquo; ãðàìîòíî. <strong>À ìû äàåì òåõíîëîãèþ, ïðîñòûå øàãè. Ðàç-äâà-òðè, è âñå. </strong>Òû òðåíåð &ndash; ìîæåøü ñòàòü çâåçäîé. Òû îðãàíèçàòîð òðåíèíãîâ &ndash; ìîæåøü ñòàòü ìèëëèîíåðîì.<br />
+Именно так делаем мы все свои тренинги. Именно так обращаемся с клиентами. <strong>Просто бери и взлетай! Это сработает</strong> даже в Хабаровске! Вокруг тебя ходят люди, им нужны твои товары и услуги. Они хотят купить у тебя. Просто ты не знаешь, как с ними &laquo;соединиться&raquo; грамотно. <strong>А мы даем технологию, простые шаги. Раз-два-три, и все. </strong>Ты тренер &ndash; можешь стать звездой. Ты организатор тренингов &ndash; можешь стать миллионером.<br />
 <div style="text-align: right;">
-	<em>Èãîðü Àíäðååâ<br />
+	<em>Игорь Андреев<br />
 	NLPING.RU</em></div>
 <br />
 <a name='vote'></a><script type='text/javascript'>
@@ -58,16 +58,16 @@ function voted(){
 }
 </script>
     <div class='mark' style='white-space: nowrap; width: 208px; overflow: hidden; float: left;'>
-    <div class='service'>Îöåíèòü:</div>
+    <div class='service'>Оценить:</div>
     <div class='stars' id='stars'>
-    <a href='setup1d0a.html?id=F4D10&amp;vote=1&amp;close=1' target='_blank' title='Óæàñíî!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup94fd.html?id=F4D10&amp;vote=2&amp;close=1' target='_blank' title='Ïëîõî'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup6eb1.html?id=F4D10&amp;vote=3&amp;close=1' target='_blank' title='Ñðåäíå'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup6ec4.html?id=F4D10&amp;vote=4&amp;close=1' target='_blank' title='Õîðîøî'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup9e3e.html?id=F4D10&amp;vote=5&amp;close=1' target='_blank' title='Îòëè÷íî!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup1d0a.html?id=F4D10&amp;vote=1&amp;close=1' target='_blank' title='Ужасно!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup94fd.html?id=F4D10&amp;vote=2&amp;close=1' target='_blank' title='Плохо'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup6eb1.html?id=F4D10&amp;vote=3&amp;close=1' target='_blank' title='Средне'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup6ec4.html?id=F4D10&amp;vote=4&amp;close=1' target='_blank' title='Хорошо'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup9e3e.html?id=F4D10&amp;vote=5&amp;close=1' target='_blank' title='Отлично!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
     </div>
     <div class='line' id='line'></div>
-    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Ñïàñèáî!</div>
+    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Спасибо!</div>
     </div> <div style='padding-top: 10px;'><!-- AddThis Button BEGIN -->
 <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
 <a class="addthis_button_facebook"></a>
@@ -116,21 +116,21 @@ var idcomments_post_url = 'F4D10.html';
 		  fjs.parentNode.insertBefore(js, fjs);
 		}(document, 'script', 'facebook-jssdk'));</script>
 
-<h3>Êîììåíòàðèè Facebook</h3>
+<h3>Комментарии Facebook</h3>
 <div id="fb-root"></div>
 <div class="fb-comments" data-href="http://nlping.ru/F4D10" data-num-posts="100" data-width="600"></div>
 
-<h3>Êîììåíòàðèè Âêîíòàêòå</h3>
+<h3>Комментарии Вконтакте</h3>
 <div id="vk_comments"></div>
 <script type="text/javascript">
 VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
-</script> </span><p><a href=index3980.html?id=F4D10 class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+</script> </span><p><a href=index3980.html?id=F4D10 class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -191,7 +191,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -213,7 +213,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
