--- a/print3a05.html
+++ b/print3a05.html
@@ -2,7 +2,7 @@
 <title>Инфогангстер</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4E04 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:23:02 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Если у вас бывает так, что в один день продажи сумасшедшие, а в другой не продается ничего, то в этой статье вы узнаете, что создает эту разницу, и как включать этот "тумблер продаж" в тот момент, когда вам это нужно.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
