--- a/print3a80.html
+++ b/print3a80.html
@@ -2,7 +2,7 @@
 <title>Компас интуиции</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=FCFECF83-F46D5-7B58EE90 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:01:50 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='интуиция, бессознательное, тренинг'>
 <meta name="description" content='Как проявляется интуиция на разных уровнях развития человека.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
