--- a/print3cf6.html
+++ b/print3cf6.html
@@ -2,7 +2,7 @@
 <title>Необычный опыт публичных выступлений</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4DF2 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:27:03 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Любое публичное выступление, это своего рода эмоционально-энергетическое взаимодействие с аудиторией.
 Обычно эти воспринимаются как волнение и большинство начинающих ораторов старается не замечать их, так как это мешает сосредоточится на речи.
