--- a/print3d13.html
+++ b/print3d13.html
@@ -2,7 +2,7 @@
 <title>Словарь терминов НЛП</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F483A by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:10:40 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='нлп'>
 <meta name="description" content='Наиболее адекватный словарь терминов НЛП, который я нашел в сети.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
