--- a/print3ea0.html
+++ b/print3ea0.html
@@ -2,7 +2,7 @@
 <title>Эриксоновский гипноз</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=8F530063-F445F-86995175 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:09:36 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='гипноз'>
 <meta name="description" content='Интервью с Михаилом Романовичем Гинзбургом об эриксоновском гипнозе.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
