--- a/print3fe8.html
+++ b/print3fe8.html
@@ -2,7 +2,7 @@
 <title>Практическая психология</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=7BC8340A-F42C3-8F3965F4 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:09:46 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Простые приемы НЛП и практической психологии для широкого круга читателей.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
