feat(encoding): reencode index4 series to utf-8

--- a/index49f0.html
+++ b/index49f0.html
@@ -8,7 +8,7 @@
         <meta name="robots" content="index,follow" />
         <meta name="description" content="Ïî÷åìó îäíè ëþäè èìåÿ äàæå áîëüøîé äîõîä óïóñêàþò äåíüãè ñêâîçü ïàëüöû, à äðóãèå - äàæå ñ ìàëåíüêèì äîõîäîì óìóäðÿþòñÿ ïðèîáðåòàòü î÷åíü äîðîãèå âåùè? Â ÷åì ðàçíèöà ìåæäó ìûøëåíèåì ïåðâûõ è âòîðûõ ëþäåé?" />
         <meta name="keywords" content="öåëü, öåëè, äåíüãè" />
-        <meta http-equiv="Content-Type" content="text/html; charset=windows-1251" />
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <link rel="alternate" type="application/rss+xml" title="RSS 2.0" href="rss/index.html" />
         <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
         
