--- a/print48b6.html
+++ b/print48b6.html
@@ -2,7 +2,7 @@
 <title>Управление состоянием</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=89200782-F4653-F9CFE418 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:06:08 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='нлп'>
 <meta name="description" content='Техники НЛП, гипноза и Нового Кода НЛП, позволяющие управлять своим эмоциональным и физическим состоянием.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
