--- a/print49bd.html
+++ b/print49bd.html
@@ -2,7 +2,7 @@
 <title>Баланс любви</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=6F14FAAF-F46EA-48902FF4 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:28:58 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='любовь'>
 <meta name="description" content='Как быть счастливым в любви? О любви в целом и любви в отношениях мужчины и женщины. О "доноризме" и "вампиризме", а так же о том, что такое "баланс любви" и почему он так важен...'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
