--- a/print420b.html
+++ b/print420b.html
@@ -2,7 +2,7 @@
 <title>Алфавит Нового Кода НЛП</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=11687B58-F45E2-8C64100A by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:10:55 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='алфавит, новый код нлп'>
 <meta name="description" content='Правила игры в оригинальный Алфавит Нового Кода НЛП.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
