--- a/print43f7.html
+++ b/print43f7.html
@@ -2,7 +2,7 @@
 <title>Статья "Как решать психологические задачи самостоятельно?" Часть 1 </title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4DFD by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:23:15 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Многие люди прекрасно осознают свои проблемы по части психологии, и часто даже их причины.
 Но при этом лишь очень немногие пользуются услугами психологов для их решения. По разным причинам (дорого, слишком интимный вопрос, нет хорошего спеца и т.д.).Но к счастью в психологии есть техники, которые позволяют некоторые проблемы решить полностью самостоятельно, вообще без чьей-либо помощи.'>
