--- a/print4686.html
+++ b/print4686.html
@@ -2,7 +2,7 @@
 <title>Техники DHE</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=23B4806C-F45D2-CC01FB56 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:09:38 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='нлп'>
 <meta name="description" content='Материалы с семинара Ричрарда Бэндлера по DHE.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
