--- a/print46f2.html
+++ b/print46f2.html
@@ -2,7 +2,7 @@
 <title>Мотивация К и ОТ</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=89D9F56A-F42A0-C838FC08 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:10:40 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='нлп'>
 <meta name="description" content='Как определять стратегию мотивации людей и пользоваться этим в своих целях.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
