--- a/print4884.html
+++ b/print4884.html
@@ -2,7 +2,7 @@
 <title>Перцовый рассвет</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4795 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:04:38 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Притча про соль и смысл нашей жизни, про уникальность, скрытую в каждом человеке, и про возможность, которую нужно использовать!'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
