--- a/print49f0.html
+++ b/print49f0.html
@@ -2,7 +2,7 @@
 <title>Гравитация целей… или кому везет с деньгами?</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F47E4 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:02:07 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='цель, цели, деньги'>
 <meta name="description" content='Почему одни люди имея даже большой доход упускают деньги сквозь пальцы, а другие - даже с маленьким доходом умудряются приобретать очень дорогие вещи? В чем разница между мышлением первых и вторых людей?'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
