--- a/print4a08.html
+++ b/print4a08.html
@@ -2,7 +2,7 @@
 <title>Время - главное, что у нас есть</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4799 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:01:53 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Посмотрите на свою жизнь в целом. Сколько еще лет Вы планируете прожить?'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
