--- a/print4b5a.html
+++ b/print4b5a.html
@@ -2,7 +2,7 @@
 <title>Мысли вслух</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F9505086-F45DB-F1785BE2 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:09:39 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Материалы с семинара Ричарда Бэндлера по DHE.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
