--- a/print4c82.html
+++ b/print4c82.html
@@ -2,7 +2,7 @@
 <title>AQAL - интегральная карта Кена Уилбера</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=78BBC7B9-F4645-87216A28 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:01:17 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Введение в интегральную теорию и практику'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
